test/files/neg/t11374.check
t11374.scala:8: error: _ is already defined as value _
  val `_` = 17   // not ok
      ^
1 error
